# discord-bot

./: Cargo.toml  Containerfile  Dockerfile  LICENSE  deny.toml  deployment.yaml
.github/workflows/: build.yaml  check.yaml
src/: main.rs
src/voice_manager/: mod.rs
