[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.12", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version="1.48.0", features=["rt-multi-thread", "macros"]}
thiserror = "2.0.17"
